[package]
name = "aether-core"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.32"
libp2p = { version = "0.56.0", features = ["tokio", "tcp", "noise", "yamux", "dns", "websocket", "macros", "ping", "identify", "kad", "gossipsub", "mdns"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
warp = { version = "0.4.2", features = ["server", "websocket"] }
